alignment fix

--- a/static/css/supporters.css
+++ b/static/css/supporters.css
@@ -16,8 +16,9 @@
     border-bottom-style:solid ;
     border-top-color: lightgray;
     border-bottom-color: lightgray;
-    margin:0 10%;
-    text-align: center;
+    /*margin:0 10%;*/
+    width: 70vw;
+    margin: 0 auto;
 }
 
 #support-container #main-supp-cont{
@@ -25,11 +26,13 @@
     text-align: center;
     margin-top: 15px;
     margin-bottom: 10px;
+    /*margin: 0 auto;*/
 }
 
 #support-container #main-supp-img{
     height: 100%;
     width: auto;
+    position: relative;
 }
 
 #supporter-other{
@@ -43,6 +46,9 @@
     height: 10vw;
     display: inline-block;
     margin-right:5vw ;
+}
+#support-container .supporter-other-img-cont:last-child{
+    margin-right: 0;
 }
 #support-container .supporter-other-img{
     height: 100%;
